# rumma

./: CUDA_SUPPORT.md  Cargo.toml  INTERACTIVE_MODE.md  QWEN_TEST_ANALYSIS.md  README.md  TEST_RESULTS.md  todo#1.md  todo#2..md  todo#3.md
.cargo/: config.toml
crates/rumma-cli/: Cargo.toml
crates/rumma-cli/src/: gui.rs  main.rs
crates/rumma-cli/tests/: cli.rs
crates/rumma-core/: Cargo.toml
crates/rumma-core/src/: awq_loader.rs  lib.rs  model.rs  quant.rs
crates/rumma-core/tests/: non_square_layers.rs  quant.rs
crates/rumma-kernels/: Cargo.toml
crates/rumma-kernels/src/: cpu.rs  cuda.rs  lib.rs
crates/rumma-kernels/tests/: kernels.rs
crates/rumma-runtime/: Cargo.toml
crates/rumma-runtime/src/: engine.rs  graph.rs  kv.rs  lib.rs  scheduler.rs
crates/rumma-runtime/tests/: engine.rs
