[package]
name = "rumma-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
rumma-runtime = { path = "../rumma-runtime" }
rumma-core = { path = "../rumma-core" }
anyhow.workspace = true
clap.workspace = true
rand.workspace = true
indicatif = "0.17"
hf-hub = { version = "0.4", default-features = false, features = ["tokio", "ureq", "native-tls"] }
dirs = "5"
tokenizers = "0.19"
rustyline = "14"
egui = { version = "0.33.0", optional = true }
eframe = { version = "0.33.0", optional = true }

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"

[features]
default = []
gui = ["dep:egui", "dep:eframe"]
