[package]
name = "rumma-core"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
rand.workspace = true
safetensors = "0.4"
half = "2"
bytemuck = { version = "1", features = ["extern_crate_alloc"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokenizers = "0.22.1"
